fixed character spacing on entry title

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -9,6 +9,7 @@ body {
 
 div form {
   display: inline-block;
+
 }
 
 .right {
@@ -72,7 +73,7 @@ input {
   box-shadow: 
     inset 0 0 8px  rgba(0,1,0,0.1),
           0 0 16px rgba(0,1,0,0.1); 
-  padding: 15px;
+  padding: 15px 45px;
   margin: 0 0 10px 0;
 }
 
@@ -112,8 +113,9 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 50px;
   color: white;
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
+  letter-spacing: -3px;
 }
 
 h4 {
@@ -163,11 +165,12 @@ li {
   background: rgba(255, 255, 255, 0.3);
   border: 2px solid black;
   border-radius: 5px;
-
 }
 
+
+
 .container {
-	width: 700px;
+  width: 700px;
   margin: auto;
   padding: 0px;
   clear: both;
@@ -175,9 +178,6 @@ li {
   color: white;
 }
 
-.center {
-  position: center;
-}
 
 
 .miniuser{
